--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -8,4 +8,33 @@
 	<%= @article.text %>
 </p>
 
+<h2>Comments</h2>
+<% @article.comments.each do |comment| %>
+<p><strong>Commenter:</strong></p>
+<%= comment.commenter %>
+
+<p><strong>Comment:</strong></p>
+<%= comment.body %>
+<% end %>
+
+<h2>Add a comment:</h2>
+<%= form_for([@article, @article.comments.build]) do |f| %>
+<p>
+	<%= f.label :commenter %>
+	<%= f.text_field :commenter %>
+</p>
+
+<p>
+	<%= f.label :body %>
+	<%= f.text_area :body %>
+</p>
+
+<p>
+	<%= f.submit %>
+</p>
+
+<% end %>
+
 <%= link_to "Back", articles_path %>
+
+<%= link_to "Edit", edit_article_path(@article) %>
